update:新增可配置文件扫描范围

--- a/src/messages/XbatisPluginBundle.properties
+++ b/src/messages/XbatisPluginBundle.properties
@@ -1,2 +1,2 @@
 new.mapper.pattern.keywords=New Mapper Pattern Keywords
-title.code.myCompletion=Code Completion
+title.code.myCompletion=Xbatis Plugin
