--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -62,9 +62,14 @@
         <gotoSymbolContributor
                 implementation="com.github.ansafari.plugin.xbatis.psi.reference.GoToSqlMapStatementContributor"/>
 
-        <editorOptionsProvider instance="com.github.ansafari.plugin.xbatis.setting.XbatisConfigurable"
-                               id="editor.preferences.myCompletion"
-                               key="title.code.myCompletion" bundle="messages.ApplicationBundle"/>
+        <projectConfigurable instance="com.github.ansafari.plugin.xbatis.setting.XbatisConfigurable"
+                             bundle="messages.XbatisPluginBundle"/>
+
+        <applicationService serviceInterface="com.github.ansafari.plugin.xbatis.setting.XbatisSettingStorage"
+                            serviceImplementation="com.github.ansafari.plugin.xbatis.setting.XbatisSettingStorage"/>
+        <!--<editorOptionsProvider instance="com.github.ansafari.plugin.xbatis.setting.XbatisConfigurable"-->
+        <!--id="editor.preferences.myCompletion"-->
+        <!--key="title.code.myCompletion" />-->
     </extensions>
 
     <actions>
