update:移动废弃的方法

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -40,7 +40,7 @@
                                         implementationClass="com.github.ansafari.plugin.xbatis.provider.XBatisProxiesLineMarkerProvider"/>
 
         <!--<codeInsight.lineMarkerProvider language="XML"-->
-        <!--implementationClass="com.github.ansafari.plugin.xbatis.provider.XmlStatementLineMarkerProvider"/>-->
+        <!--implementationClass="com.github.ansafari.plugin.xbatis.simple.XmlStatementLineMarkerProvider"/>-->
 
         <!--java 字面量 reference to xml statement-->
         <psi.referenceContributor
