--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -62,12 +62,13 @@
         <gotoSymbolContributor
                 implementation="com.github.ansafari.plugin.psi.reference.GoToSqlMapStatementContributor"/>
 
-        <projectConfigurable instance="com.github.ansafari.plugin.setting.XbatisConfigurable"
-                             bundle="messages.XbatisPluginBundle"/>
+
+        <!--<projectConfigurable instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
+                             <!--bundle="messages.XbatisPluginBundle"/>-->
 
         <!--xbatis的配置-->
-        <applicationService serviceInterface="com.github.ansafari.plugin.setting.XbatisSettingStorage"
-                            serviceImplementation="com.github.ansafari.plugin.setting.XbatisSettingStorage"/>
+        <!--<applicationService serviceInterface="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"-->
+        <!--serviceImplementation="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"/>-->
         <!--<editorOptionsProvider instance="XbatisConfigurable"-->
         <!--id="editor.preferences.myCompletion"-->
         <!--key="title.code.myCompletion" />-->
