--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>me.xiongjinteng.plugin.xbatis</id>
     <name>Xbatis-Plugin</name>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <vendor email="xiongjinteng@gmail.com" url="https://ansafari.github.io">GitHub</vendor>
 
     <description><![CDATA[
@@ -10,7 +10,10 @@
     ]]></description>
 
     <change-notes><![CDATA[
-      支持Ibatis mapper.xml 与 JAVA DAO 中的 statementName 的映射跳转.<br>
+        v0.0.3：<br>
+            1. 优化Java对象扫描范围为Spring Bean，且字面量在方法内.<br>
+            2. 区分Ibatis／Mybatis，新增SqlMap，Mapper内部元素之间依赖的查找.<br>
+        v0.0.2：支持Ibatis mapper.xml 与 JAVA DAO 中的 statementName 的映射跳转.<br>
     ]]>
     </change-notes>
 
