--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -38,7 +38,7 @@
         <dom.fileDescription id="xbatis.mybatis.configuration"
                              implementation="com.github.ansafari.plugin.mybatis.dom.description.ConfigurationDescription"/>
         <definitionsSearch
-                implementation="com.github.ansafari.plugin.mybatis.search.MyBatis3ProxiesDefinitionsSearcher"/>
+                implementation="com.github.ansafari.plugin.mybatis.search.MyBatisProxiesDefinitionsSearcher"/>
 
         <!--service-->
         <projectService serviceImplementation="com.github.ansafari.plugin.service.DomFileElementsFinder"/>
@@ -77,8 +77,8 @@
         <!--xbatis的配置-->
         <applicationService serviceInterface="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"
                             serviceImplementation="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"/>
-        <editorOptionsProvider instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"
-                               id="editor.preferences.myCompletion" key="title.code.myCompletion" groupId=""/>
+        <!--<editorOptionsProvider instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
+                               <!--id="editor.preferences.myCompletion" key="title.code.myCompletion" groupId=""/>-->
     </extensions>
 
     <actions>
