--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -45,7 +45,10 @@
 
         <!--java reference to xml-->
         <codeInsight.lineMarkerProvider language="JAVA"
-                                        implementationClass="com.github.ansafari.plugin.provider.ProxiesLineMarkerProvider"/>
+                                        implementationClass="com.github.ansafari.plugin.ibatis.provider.IbatisProxiesLineMarkerProvider"/>
+
+        <codeInsight.lineMarkerProvider language="JAVA"
+                                        implementationClass="com.github.ansafari.plugin.mybatis.provider.MybatisProxiesLineMarkerProvider"/>
 
         <!--<codeInsight.lineMarkerProvider language="XML"-->
         <!--implementationClass="XmlStatementLineMarkerProvider"/>-->
@@ -78,7 +81,7 @@
         <applicationService serviceInterface="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"
                             serviceImplementation="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"/>
         <!--<editorOptionsProvider instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
-                               <!--id="editor.preferences.myCompletion" key="title.code.myCompletion" groupId=""/>-->
+        <!--id="editor.preferences.myCompletion" key="title.code.myCompletion" groupId=""/>-->
     </extensions>
 
     <actions>
