--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>me.xiongjinteng.plugin.xbatis</id>
     <name>Xbatis-Plugin</name>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <vendor email="xiongjinteng@gmail.com" url="https://ansafari.github.io">GitHub</vendor>
 
     <description><![CDATA[
@@ -10,6 +10,11 @@
     ]]></description>
 
     <change-notes><![CDATA[
+        v0.0.4:<br>
+            1. 更新Dao接口所继承的公共接口能够找到，并列举所有Statement；<br>
+            2. 支持Mybatis/Ibatis Configuration读写操作；<br>
+            3. 格式化快速预览XML Statement的语句；<br>
+            4. 扫描范围新增是否继承com.alibaba.cobarclient.dao.MysdalBaseDao判断。<br>
         v0.0.3：<br>
             1. 优化Java对象扫描范围为Spring Bean，且字面量在方法内.<br>
             2. 区分Ibatis／Mybatis，新增SqlMap，Mapper内部元素之间依赖的查找.<br>
