--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -63,16 +63,20 @@
                 implementation="com.github.ansafari.plugin.psi.reference.XBatisReferenceContributor"/>
 
         <lang.documentationProvider language="JAVA"
-                                    implementationClass="com.github.ansafari.plugin.provider.StatementDocumentationProvider"/>
+                                    implementationClass="com.github.ansafari.plugin.ibatis.provider.IbatisStatementDocumentationProvider"/>
+
+        <lang.documentationProvider language="JAVA"
+                                    implementationClass="com.github.ansafari.plugin.mybatis.provider.MyBatisStatementDocumentationProvider"/>
+
 
         <inspectionToolProvider
                 implementation="com.github.ansafari.plugin.mybatis.provider.MyBatisInspectionToolsProvider"/>
 
         <qualifiedNameProvider
-                implementation="com.github.ansafari.plugin.provider.IdentifiableStatementQualifiedNameProvider"/>
+                implementation="com.github.ansafari.plugin.ibatis.provider.SqlMapIdentifiableStatementQualifiedNameProvider"/>
 
         <callHierarchyProvider language="XML"
-                               implementationClass="com.github.ansafari.plugin.provider.IdentifiableStatementHierarchyProvider"/>
+                               implementationClass="com.github.ansafari.plugin.ibatis.provider.SqlMapIdentifiableStatementHierarchyProvider"/>
 
         <!--symbol name search alt+cmd+o-->
         <gotoSymbolContributor
@@ -80,11 +84,11 @@
 
 
         <!--<projectConfigurable instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
-                             <!--bundle="messages.XbatisPluginBundle"/>-->
+        <!--bundle="messages.XbatisPluginBundle"/>-->
 
         <!--xbatis的配置-->
         <!--<applicationService serviceInterface="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"-->
-                            <!--serviceImplementation="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"/>-->
+        <!--serviceImplementation="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"/>-->
         <!--<editorOptionsProvider instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
         <!--id="editor.preferences.myCompletion" key="title.code.myCompletion" groupId=""/>-->
     </extensions>
