update:更新Xbatis检测不到xml依赖的告警提示

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -69,7 +69,7 @@
                                     implementationClass="com.github.ansafari.plugin.mybatis.provider.MyBatisStatementDocumentationProvider"/>
 
 
-        <inspectionToolProvider id="xbatis.inspection.myBatisInspection"
+        <inspectionToolProvider id="xbatis.inspection"
                                 implementation="com.github.ansafari.plugin.provider.XbatisInspectionToolsProvider"/>
 
         <qualifiedNameProvider
