update:新增Ant打包，移除开发使用的一些lib依赖

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -84,7 +84,7 @@
 
 
         <!--<projectConfigurable instance="com.github.ansafari.plugin.generate.setting.XbatisConfigurable"-->
-        <!--bundle="messages.XbatisPluginBundle"/>-->
+        <!--bundle="XbatisPluginBundle"/>-->
 
         <!--xbatis的配置-->
         <!--<applicationService serviceInterface="com.github.ansafari.plugin.generate.setting.XbatisSettingStorage"-->
