--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -10,15 +10,16 @@
     ]]></description>
 
     <change-notes><![CDATA[
-        v0.0.4:<br>
-            1. 更新Dao接口所继承的公共接口能够找到，并列举所有Statement；<br>
-            2. 支持Mybatis/Ibatis Configuration读写操作；<br>
-            3. 格式化快速预览XML Statement的语句；<br>
-            4. 扫描范围新增是否继承com.alibaba.cobarclient.dao.MysdalBaseDao判断。<br>
-        v0.0.3：<br>
-            1. 优化Java对象扫描范围为Spring Bean，且字面量在方法内.<br>
-            2. 区分Ibatis／Mybatis，新增SqlMap，Mapper内部元素之间依赖的查找.<br>
-        v0.0.2：支持Ibatis mapper.xml 与 JAVA DAO 中的 statementName 的映射跳转.<br>
+        <p>v0.0.4:</p>
+            <p>1. 更新Dao接口所继承的公共接口能够找到，并列举所有Statement；</p>
+            <p>2. 支持Mybatis/Ibatis Configuration读写操作；</p>
+            <p>3. 格式化快速预览XML Statement的语句；</p>
+            <p>4. 扫描范围新增是否继承com.alibaba.cobarclient.dao.MysdalBaseDao判断；</p>
+            <p>5. 更新statement找不到的告警提示。</p>
+        <p>v0.0.3：</p>
+            <p>1. 优化Java对象扫描范围为Spring Bean，且字面量在方法内.</p>
+            <p>2. 区分Ibatis／Mybatis，新增SqlMap，Mapper内部元素之间依赖的查找.</p>
+        <p>v0.0.2：支持Ibatis mapper.xml 与 JAVA DAO 中的 statementName 的映射跳转.</p>
     ]]>
     </change-notes>
 
